# near_groth16_implementation

./: Cargo.toml  README.md
scripts/: deploy_contract.sh  get_verifier.sh
src/: constants.rs  lib.rs  near.rs  risczero.rs  utils.rs  verifier.rs
